--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>bestseller-toys</module>
         <module>gateway</module>
         <module>shared</module>
+        <module>config-server</module>
     </modules>
     <packaging>pom</packaging>
 
