--- a/bestseller-fashion/pom.xml
+++ b/bestseller-fashion/pom.xml
@@ -48,12 +48,32 @@
 			<artifactId>hot-deals</artifactId>
 			<version>${parent.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-contract-verifier</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-contract-maven-plugin</artifactId>
+				<version>2.2.4.RELEASE</version>
+				<extensions>true</extensions>
+				<configuration>
+					<testFramework>JUNIT</testFramework>
+					<baseClassMappings>
+						<baseClassMapping>
+							<contractPackageRegex>.*fashion.*</contractPackageRegex>
+							<baseClassFQN>com.example.chaos.monkey.shopping.bestseller.fashion.FashionContractsBaseTestClass</baseClassFQN>
+						</baseClassMapping>
+					</baseClassMappings>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
