--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <spring-boot-dependencies.version>2.3.3.RELEASE</spring-boot-dependencies.version>
         <spring-cloud.version>Hoxton.SR7</spring-cloud.version>
         <chaos-monkey-spring-boot.version>2.1.1</chaos-monkey-spring-boot.version>
