Updates for bus example and refining CB listeners in gateway

--- a/hotdeals-updater/pom.xml
+++ b/hotdeals-updater/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>twillio-notifier</artifactId>
+	<artifactId>hotdeals-updater</artifactId>
 
 	<dependencies>
 		<dependency>
