Add demo code for OpenFeign custom configuration and bean overrides.

--- a/shop/src/main/resources/application.yml
+++ b/shop/src/main/resources/application.yml
@@ -20,3 +20,6 @@ spring:
 #        enabled: false
       ribbon:
         enabled: false
+logging:
+  level:
+    com.example.chaos.monkey.shopping.shop.FashionBestsellerClient: DEBUG
