--- a/shop/pom.xml
+++ b/shop/pom.xml
@@ -32,6 +32,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.github.openfeign</groupId>
+			<artifactId>feign-jackson</artifactId>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>com.github.ben-manes.caffeine</groupId>-->
 <!--			<artifactId>caffeine</artifactId>-->
