Add demo code for inProgress and generate stubs at runtime scenarios.

--- a/bestseller-fashion/pom.xml
+++ b/bestseller-fashion/pom.xml
@@ -77,6 +77,7 @@
 							<baseClassFQN>com.example.chaos.monkey.shopping.bestseller.fashion.FashionContractsBaseTestClass</baseClassFQN>
 						</baseClassMapping>
 					</baseClassMappings>
+					<failOnInProgress>false</failOnInProgress>
 				</configuration>
 			</plugin>
 		</plugins>
