--- a/bestseller-toys/pom.xml
+++ b/bestseller-toys/pom.xml
@@ -37,6 +37,11 @@
 			<artifactId>spring-cloud-starter-kubernetes-config</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-contract-verifier</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
@@ -61,6 +66,21 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-contract-maven-plugin</artifactId>
+				<version>2.2.4.RELEASE</version>
+				<extensions>true</extensions>
+				<configuration>
+					<testFramework>JUNIT</testFramework>
+					<baseClassMappings>
+						<baseClassMapping>
+							<contractPackageRegex>.*toys.*</contractPackageRegex>
+							<baseClassFQN>com.example.chaos.monkey.shopping.bestseller.toys.ToysContractsBaseTestClass</baseClassFQN>
+						</baseClassMapping>
+					</baseClassMappings>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
