--- a/shop/src/test/resources/application.yml
+++ b/shop/src/test/resources/application.yml
@@ -1,6 +1,7 @@
 stubrunner:
   idsToServiceIds:
     bestseller-fashion: fashion-bestseller
+    bestseller-toys: toys-bestseller
 spring:
   cloud:
     loadbalancer:
