Switch Ribbon enabled to true for the demo.

--- a/shop/src/main/resources/application.yml
+++ b/shop/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
 #          spec: expireAfterWrite=30s
 #        enabled: false
       ribbon:
-        enabled: false
+        enabled: true
 logging:
   level:
     com.example.chaos.monkey.shopping.shop.FashionBestsellerClient: DEBUG
